# Compiler-Learner

./: .gitignore  CMakeLists.txt  README.html  README.md
example/: grammar3.txt  grammar4.txt  grmmar4.txt  input1.txt  input2.txt  input3.txt  input4.txt  re1.txt  re2.txt
include/: defs.h  firstset.h  grammar.h  lexical.h  nfa2dfa.h  re2nfa.h  syntax.h  utils.h
src/: defs.cpp  firstset.cpp  grammar.cpp  lexical.cpp  lexical_demo.cpp  lexical_test.cpp  lexicaltest.cpp  nfa2dfa.cpp  re2nfa.cpp  syntax.cpp  syntax_demo.cpp  syntax_test.cpp  syntaxtest.cpp  temp.cpp  utils.cpp
